fix images with uneven width/height

--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -55,6 +55,7 @@ $hide-artist-animation: cubic-bezier(0.560, -0.270, 1.000, 0.830);
                 width: 80%;
                 height: 80%;
                 border-radius: 50%;
+                object-fit: cover;
                 box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
                 opacity: 0.7;
                 transition: opacity 0.25s ease-in-out, box-shadow 0.20s ease-in-out, transform 0.1s ease-in-out, border 0.1s ease-in-out;
